[gd_scene load_steps=3 format=3 uid="uid://bgg8u3wx05wrs"]

[ext_resource type="Script" path="res://ui/pause_menu/pause_menu.gd" id="1_svd0n"]
[ext_resource type="LabelSettings" uid="uid://cadmwst5q0t1d" path="res://ui/label_settings/menu_item.tres" id="2_fixk5"]

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_svd0n")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.498039, 0.498039, 0.498039, 0.498039)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -376.0
offset_top = -65.5
offset_right = 376.0
offset_bottom = 65.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ResumeLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 0
text = "Resume"
label_settings = ExtResource("2_fixk5")
horizontal_alignment = 1

[node name="Spacing" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1

[node name="ExitLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 0
text = "Exit
"
label_settings = ExtResource("2_fixk5")
horizontal_alignment = 1

[connection signal="mouse_entered" from="VBoxContainer/ResumeLabel" to="." method="_on_resume_label_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/ResumeLabel" to="." method="_on_resume_label_mouse_exited"]
[connection signal="mouse_entered" from="VBoxContainer/ExitLabel" to="." method="_on_exit_label_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/ExitLabel" to="." method="_on_exit_label_mouse_exited"]
